[package]
name = "DaevNetEngine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1.10"
async-trait = "0.1"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13.5"

quick-xml = "0.37.4"
serde-xml-rs = "0.6"